# custom_chatbot_server

./: pyproject.toml
app/models/: simple_conversation_chat.py  summary_conversation_chat.py
app/server/: app.py
