[tool.poetry]
name = "custom_chatbot_server"
version = "0.1.0"
description = ""
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
langchain = "^0.0.305"
openai = "^0.27.2"
gunicorn = "^20.1.0"
pydantic = "^1.10.7"
starlette = "0.27.0"
logging = "^0.4.9.6"
torch = "^2.0.1+cpu"
sentence-transformers = "2.2.2"
chromadb = "0.3.26"
llama-cpp-python = "^0.2.11"




[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
